Add .nojekyll file and update dependencies

--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://aylat7.github.io/my-portfolio",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "pages": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "latest",
-    "git": "^0.1.5",
     "lucide-react": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
